[gd_scene load_steps=3 format=2]

[ext_resource path="res://ControlNodes/ExampleTheme.tres" type="Theme" id=1]
[ext_resource path="res://ObjectNodes/Human/HumanInfoBox.gd" type="Script" id=2]

[node name="CannonInfo" type="TextureRect"]
anchor_right = 0.196
anchor_bottom = 0.162
margin_right = -163.28
margin_bottom = -0.100006
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 17.0111, 190.739 )
color = Color( 0.160784, 0.176471, 0.235294, 1 )
polygon = PoolVector2Array( -16.6686, -21.0372, 115.849, 3.3078, 246.043, -20.3988 )

[node name="Panel" type="Panel" parent="."]
margin_right = 264.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Panel"]
margin_left = 71.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 36.0
text = "Frank Smith"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text1" type="RichTextLabel" parent="Panel"]
margin_top = 66.0373
margin_right = 83.0
margin_bottom = 99.0373
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assignment" type="RichTextLabel" parent="Panel"]
margin_left = 83.0
margin_top = 33.0
margin_right = 186.0
margin_bottom = 66.0
text = "Cannonier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="RichTextLabel" parent="Panel"]
margin_left = 209.0
margin_top = 66.0
margin_right = 254.0
margin_bottom = 99.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemLabel" type="RichTextLabel" parent="Panel"]
margin_left = 122.0
margin_top = 98.6663
margin_right = 264.0
margin_bottom = 131.666
text = "ExampleName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="RichTextLabel" parent="Panel"]
margin_left = 216.946
margin_top = 131.666
margin_right = 243.946
margin_bottom = 164.666
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" type="RichTextLabel" parent="Panel"]
margin_top = 98.6663
margin_right = 71.0
margin_bottom = 131.666
text = "Item: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxUsers" type="RichTextLabel" parent="Panel"]
margin_top = 132.0
margin_right = 122.0
margin_bottom = 165.0
text = "Assigned:"
__meta__ = {
"_edit_use_anchors_": false
}
